Seed Database and refresh Home on focus

--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -1,4 +1,4 @@
-{
+[{
     "type": "postgres",
     "host": "localhost",
     "port": 5432,
@@ -14,4 +14,23 @@
     "cli": {
         "migrationsDir": "src/database/migrations"
     }
+ },
+ {
+   "name": "seed",
+   "type": "postgres",
+   "host": "localhost",
+   "port": 5432,
+   "username": "postgres",
+   "password": "root",
+   "database": "parlador",
+   "entities": [
+      "src/app/models/*.ts"
+   ],
+   "migrations": [
+      "src/database/seed/*.ts"
+   ],
+   "cli": {
+       "migrationsDir": "src/database/seed"
+   }
  }
+]
